--- a/snippets/footer-index2.liquid
+++ b/snippets/footer-index2.liquid
@@ -105,7 +105,7 @@
           Jeff Cowan
         </a>
       </p>
-      <p class="no-margin pull-right visible-xs">
+      <p class="no-margin pull-left visible-xs">
         <a href="/pages/photographer-credits" title="Photo Credits">
           VOSH Retreat Photos
         </a> by
@@ -146,4 +146,4 @@
   
   
 </footer>
-<a href="#" class="scroll_top" title="Scroll to Top" style="display: block;"><i class="fa fa-arrow-up"></i></a>
+<!-- <a href="#" class="scroll_top" title="Scroll to Top" style="display: block;"><i class="fa fa-arrow-up"></i></a> -->
