--- a/templates/page.photographer-credits.liquid
+++ b/templates/page.photographer-credits.liquid
@@ -9,28 +9,36 @@
       </a>
     </h2>
 
-    <hr class="no-margin" />
+    <hr />
 
-    <div class="media">
-      <div class="media-left">
-        <img class="photo-cred media-object" src="{{ 'vosh_fello_africa.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+    <div class="row-eq-height">
+
+      <div class="media v-center">
+        <div class="media-left">
+          <img class="photo-cred media-object" src="{{ 'vosh_fello_africa.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+        </div>
       </div>
-    </div>
-    <div class="media">
-      <div class="media-left">
-        <img class="photo-cred media-object" src="{{ 'charity_hp.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+
+      <div class="media v-center">
+        <div class="media-left">
+          <img class="photo-cred media-object" src="{{ 'charity_hp.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+        </div>
       </div>
-    </div>
-    <div class="media">
-      <div class="media-left">
-        <img class="photo-cred media-object" src="{{ 'charity_top.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+
+      <div class="media v-center">
+        <div class="media-left">
+          <img class="photo-cred media-object" src="{{ 'charity_top.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+        </div>
       </div>
-    </div>
-    <div class="media">
-      <div class="media-left">
-        <img class="photo-cred media-object" src="{{ 'fello_and_vosh.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+
+      <div class="media v-center">
+        <div class="media-left">
+          <img class="photo-cred media-object" src="{{ 'fello_and_vosh.jpg' | asset_url }}" alt="Jeff Cowan Photo">
+        </div>
       </div>
+
     </div>
+    
   </div>
 
 
