initial pillars setup

--- a/assets/timber.js.liquid
+++ b/assets/timber.js.liquid
@@ -222,10 +222,10 @@ timber.autoResponsiveElements = function () {
 
   $('table').wrap('<div class="table-wrapper"></div>');
 
-//   $iframeVideo.each(function () {
-//     // Add wrapper to make video responsive
-//     $(this).wrap('<div class="video-wrapper"></div>');
-//   });
+  $iframeVideo.each(function () {
+    // Add wrapper to make video responsive
+    $(this).wrap('<div class="video-wrapper"></div>');
+  });
 
   $iframeReset.each(function () {
     // Re-set the src attribute on each iframe after page load
