--- a/snippets/header2.liquid
+++ b/snippets/header2.liquid
@@ -5,7 +5,7 @@
 </div>
 <div id="header-ontop" class="is-sticky"></div> -->
 <header id="header" class="header style2">
-  <div class="row minor-h-marg">
+  <div class="row">
     <div class="{{margin_shipping_icon}}">
       <div{{container_shipping_icon}}>
         <div class="row">
@@ -15,11 +15,11 @@
               {% if header2 == "Instagram" %}
                 <h2 class="home-collection">Shop Instagram</h2>
               {% else %}
-                <h1 class="small-caps hidden-xs hidden-sm">Get Yourself a Gift, As You Give the Gift of Vision</h1>
-                <h3 class="small-caps hidden-md hidden-lg">Get Yourself a Gift, As You Give the Gift of Vision</h2>
+                <h1 class="small-caps hidden-xs">Get Yourself a Gift, As You Give the Gift of Vision</h1>
+                <h2 class="small-caps visible-xs">Get Yourself a Gift, As You Give the Gift of Vision</h2>
 
-                <h3 class="hidden-xs hidden-sm small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h3>
-                <h6 class="hidden-md hidden-lg small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h5>
+                <h3 class="hidden-xs small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h3>
+                <h5 class="visible-xs small-caps"><span class="u-accent">Free Shipping</span> anywhere in the United States & Canada.</h5>
 
                 <hr class="minor-h-marg" />
 
