re push production theme

--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -8,113 +8,60 @@
   {% endif %}
 {% endif %}
 
-<div class="banner-hp banner-pic jumbotron col-xs-12">
+<div class="no-pads col-xs-12 no-margin">
 
-  <div class="text-center">
-    <h1 class="text-center">We Are All Fellos</h1>
 
-    <span class="h2">Fello <span class="bright-green">Friends </span> &middot; </span>
+  <div class="text-center full-w video-text row-eq-height"
+       style="position: absolute;
+              width: 100%;
+              height: 100%;
+              background-color: rgba(0, 0, 0, .15);
+              z-index: 1;"
+       >
 
-    <span class="h2">Fello <span class="orange">Travelers </span> &middot; </span>
+    <div style="margin: auto;">
 
-    <span class="h2">Fello <span class="pink">Patrons </span> &middot; </span>
+      <h1>We Are All Fellos</h1>
 
-    <span class="h2">Fello <span class="aqua">Humanity</span></span>
+      <span class="h2">Fello Friends <span class="blue">&middot;</span> </span>
 
-    <hr />
-  </div>
+      <span class="h2">Fello Travelers <span class="blue">&middot;</span> </span>
 
-  <div class="text-center">
-    <a href="/collections/all">
-      <button class="cta-btn sharp btn btn-lg">
-        <p class="h2">SHOP SUNGLASSES</p>
-      </button>
-    </a>
-  </div>
+      <span class="h2">Fello Patrons <span class="blue">&middot;</span> </span>
 
-</div>
+      <span class="h2">Fello Humanity</span>
 
-<div class="pillar">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel sharp">
+      <hr class="minor-h-marg" />
 
-    <img src="{{ 'white_pillar.jpg' | asset_url }}" alt="Fello Ambassador">
-
-    <div class="panel-body outline">
-
-      <div class="pillar-cover row-eq-height">
-
-        <div class="v-center full-w">
-
-          <div class="widget widget_newletter">
-
-            <h2 class="text-center highlight visible-lg">Join the Cause</h2>
-            <p class="visible-lg text-center"><strong>Get 10% off any purchase!</strong><br /><small> Learn about our products end charitable causes.</small></p>
-            <p class="hidden-lg text-center"><span class="highlight"><strong>Join the Cause</strong></span><br /><small> Get 10% off any purchase!</small></p>
-
-            <form style="position: relative;" class="newletter" action="{{ settings.newsletter_form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
-              <input style="padding: 7px 15px;" class="email-text" type="text" name="newsletter" placeholder="Your email..." value="">
-              <span><button class="button add_to_cart_button" name="subscribe" id="subscribe" type="submit"><span class="icon pe-7s-angle-right"></span></button></span>
-            </form>
-
-          </div>
-
-        </div>
-
-      </div>
+      <a href="/collections/all">
+        <button class="cta-btn sharp btn btn-lg">
+          <p class="h2">SHOP SUNGLASSES</p>
+        </button>
+      </a>
 
     </div>
-  </div>
-</div>
 
-<div class="pillar">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp">
-
-    <img src="{{ 'fello_ambassadors.JPG' | asset_url }}" alt="Fello Ambassador">
-
-    <div class="panel-body text-center">
-      
-      <div class="pillar-cover row-eq-height">
-        
-        <div class="v-center">
-
-          <h1 class="small-caps invisible visible-lg no-margin">Fello Ambassador</h1>
-          <h4 class="small-caps invisible hidden-lg no-margin"><strong>Fello Ambassador</strong></h4>
-
-          <img class="minor-v-marg" style="width: 25%;" src="{{ 'fello_ambassador_white.png' | asset_url }}" alt="fello ambassador">   
-
-          <br />
-
-          <h4 class="invisible visible-lg no-margin">Get Paid to Spread the Love</h4>
-          <p class="invisible hidden-lg no-margin"><small>Get Paid to Spread the Love</small></p>
-
-        </div>
-          
-      </div>
-        
-    </div>
-  </div>
-</div>
-
-<div class="pillar">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel sharp">
-
-    <img src="{{ 'white_pillar.jpg' | asset_url }}" alt="Fello Ambassador">
-
-    <div class="panel-body outline">
-
-      <div class="pillar-cover row-eq-height">
-
-        <div class="v-center full-w">
-
-          <h2 class="text-center highlight">Shop<br />Instagram</h2>
-
-        </div>
-
-      </div>
-
-    </div>
   </div>
 
+  <div class="video-wrapper hidden">
+    <iframe width="100%"
+            height="100%"
+            src="https://www.youtube.com/embed/PfbROXMmw-s?autoplay=1;loop=1;playlist=PfbROXMmw-s;iv_load_policy=3;rel=0;hd=1;showinfo=0;controls=0"
+            frameborder="0"
+            webkitallowfullscreen=""
+            mozallowfullscreen=""
+            allowfullscreen=""
+            allownetworking="internal"
+            style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; pointer-events: none;"
+            id="bg-video"
+            >
+    </iframe>
+  </div>
+  
+  <div class="video-placeholder">
+  </div>
+  
+  <img id="for-ios" class="full-w hidden" src="{{ 'vosh_fello_africa.jpg' | asset_url }}" alt="Vosh Clinic">
 </div>
 
 
@@ -175,7 +122,7 @@
 
       <div class="row row-eq-height hidden-xs">
         <div class="col-md-3 col-sm-6 col-md-offset-3 v-center">
-          <h1 class="highlight text-right">3021</h1>
+          <h1 class="highlight text-right">3028</h1>
         </div>
 
         <div class="col-md-3 col-sm-6 v-center">
@@ -183,7 +130,7 @@
         </div>
       </div>
       
-      <h1 class="visible-xs text-center"><span class="highlight">3021 </span>&nbsp Lives Changed</h1>
+      <h1 class="visible-xs text-center"><span class="highlight">3028 </span>&nbsp Lives Changed</h1>
     </div>
 
 
@@ -208,7 +155,7 @@
 " | split: " " %}
 
 {% assign insta-classes = "banner-border primary col-xs-4 col-sm-2 no-pads quick-view" %}
-<div class="row">
+<div class="row no-margin">
   {% for product in insta_products_top %}
     {% assign product_handle = product | downcase | split: "_" | join: "-" %}
     <!-- Can change when handles are changed -->
@@ -252,3 +199,39 @@
     </a>
   {% endfor %}
 </div>
+
+<script>
+  $(document).ready(function() {
+    if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+      $(".video-placeholder").remove();
+      $("#for-ios").removeClass("hidden");
+      $("#video-wrapper").remove();
+      $(".video-text h1").css("margin-bottom", 0);
+      $(".video-text .h2").css("margin-top", 0);
+      $(".video-text").css("background-color", "transparent");
+    } else {
+      $(".video-wrapper").removeClass("hidden");
+    }
+  });
+
+  $(".video-wrapper").ready(function() {
+    $("#bg-video").ready(function() {
+      sleep(500).then(function() {
+        $(".video-placeholder").remove();
+      });
+    });
+  });
+  
+/**
+ * @author       Rob W <gwnRob@gmail.com>
+ * @website      http://stackoverflow.com/a/7513356/938089
+ * @version      20131010
+ * @description  Executes function on a framed YouTube video (see website link)
+ *               For a full list of possible functions, see:
+ *               https://developers.google.com/youtube/js_api_reference
+ * @param String frame_id The id of (the div containing) the frame
+ * @param String func     Desired function to call, eg. "playVideo"
+ *        (Function)      Function to call when the player is ready.
+ * @param Array  args     (optional) List of arguments to pass to function func
+ */
+</script>
