--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -148,6 +148,9 @@ hr.highlight {
 .dark-gray {
   color: #111111 !important;
 }
+.white {
+  color: white !important;
+}
 .modal-content.with-escape {
   background-color: black;
 }
