--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -35,41 +35,9 @@
 </div>
 
 <div class="pillar">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel sharp">
-
-    <img src="{{ 'white_pillar.jpg' | asset_url }}" alt="Fello Ambassador">
-
-    <div class="panel-body outline">
-
-      <div class="pillar-cover row-eq-height">
-
-        <div class="v-center full-w">
-
-          <div class="widget widget_newletter">
-
-            <h2 class="text-center highlight visible-lg">Join the Cause</h2>
-            <p class="visible-lg text-center"><strong>Get 10% off any purchase!</strong><br /><small> Learn about our products end charitable causes.</small></p>
-            <p class="hidden-lg text-center"><span class="highlight"><strong>Join the Cause</strong></span><br /><small> Get 10% off any purchase!</small></p>
-
-            <form style="position: relative;" class="newletter" action="{{ settings.newsletter_form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
-              <input style="padding: 7px 15px;" class="email-text" type="text" name="newsletter" placeholder="Your email..." value="">
-              <span><button class="button add_to_cart_button" name="subscribe" id="subscribe" type="submit"><span class="icon pe-7s-angle-right"></span></button></span>
-            </form>
-
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-  </div>
-</div>
-
-<div class="pillar">
   <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp">
 
-    <img src="{{ 'fello_ambassadors.JPG' | asset_url }}" alt="Fello Ambassador">
+    <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Ambassador">
 
     <div class="panel-body text-center">
       
@@ -106,7 +74,39 @@
 
         <div class="v-center full-w">
 
-          <h2 class="text-center highlight">Shop<br />Instagram</h2>
+          <div class="widget widget_newletter">
+
+            <h2 class="text-center highlight visible-lg">Join the Cause</h2>
+            <p class="visible-lg text-center"><strong>Get 10% off any purchase!</strong><br /><small> Learn about our products end charitable causes.</small></p>
+            <p class="hidden-lg text-center"><span class="highlight"><strong>Join the Cause</strong></span><br /><small> Get 10% off any purchase!</small></p>
+
+            <form style="position: relative;" class="newletter" action="{{ settings.newsletter_form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
+              <input style="padding: 7px 15px;" class="email-text" type="text" name="newsletter" placeholder="Your email..." value="">
+              <span><button class="button add_to_cart_button" name="subscribe" id="subscribe" type="submit"><span class="icon pe-7s-angle-right"></span></button></span>
+            </form>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="pillar">
+  <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp">
+
+    <img src="{{ 'shop_instagram_1.jpg' | asset_url }}" alt="Shop Instagram">
+
+    <div class="panel-body text-center">
+
+      <div class="pillar-cover row-eq-height">
+
+        <div class="v-center full-w">
+
+          <h2 class="white">Shop<br />Instagram</h2>
 
         </div>
 
