index 10 and title adjustments towards good merge of published theme

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -13,7 +13,7 @@
   
   <!-- Title and description ================================================== -->
   <title>
-    {{ page_title | capitalize }}{% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %} | {{ 'general.meta.tags' | t: tags: meta_tags }}{% endif %}{% if current_page != 1 %} | {{ 'general.meta.page' | t: page: current_page }}{% endif %}{% unless page_title contains shop.name %} | {{ shop.name }}{% endunless %}
+    {{ page_title }}{% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %} | {{ 'general.meta.tags' | t: tags: meta_tags }}{% endif %}{% if current_page != 1 %} | {{ 'general.meta.page' | t: page: current_page }}{% endif %}{% unless page_title contains shop.name %} | {{ shop.name }}{% endunless %}
   </title>
   
     {% include 'header-stylesheets' %}
